Finalize slides before adding lecture notes

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -25,7 +25,7 @@
 \nocite{*}
 
 \date{\today}
-\usetheme{Berlin}
+\usetheme{Madrid}
 
 \begin{document}
 
@@ -42,14 +42,43 @@
 
 \begin{frame}
   \frametitle{What: Math and Linguistics at Grinnell College}
+  \begin{columns}
+    \column{0.5\textwidth}
+      \begin{itemize}
+      \item Absence of math \& linguistics classes at Grinnell and comparable institutions
+      \item Cf. integration of mathematics into Biology, Physics, Psychology.
+      \end{itemize}
+    \column{0.5\textwidth}
+      \begin{figure}
+        \centering
+        \includegraphics[width=0.3\textwidth]{GrinnellLogo.jpg}
+      \end{figure}
+  \end{columns}
 \end{frame}
 
 \begin{frame}
   \frametitle{So What: Mathematical Literacy}
+  What are linguists missing by not having mathematics in their toolbox?
+  \begin{itemize}
+  \item Disciplinary level: precision of hypotheses and modeling for new hypotheses
+  \item Subdisciplinary level:
+    \begin{itemize}
+      \item Phonetics: Recent success in statistical models (esp. Neural Networks)
+      \item Typology: Clustering models and numerical analysis.
+      \item Syntax: Generative models, algebraic representations, etc.
+      \item ...and much more!
+    \end{itemize}
+  \end{itemize}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Now What: A Course on MCB!}
+  \frametitle{Now What: A Course on MCB}
+  \begin{itemize}
+  \item A followup to a standard UG Syntax course, ideally after a Mathematical Linguistics course
+  \item Critically compares two mathematical approaches to minimalist syntax
+  \item Practices proving statements from mathematical axioms and stating hypotheses
+  \item Offers a starting point for integrating math into linguistics courses at Grinnell and elsewhere
+  \end{itemize}
 \end{frame}
 
 \section{Course Syllabus}
@@ -186,21 +215,55 @@
 
 \begin{frame}
   \frametitle{Example Lecture Notes Excerpt}
+  Forthcoming...
 \end{frame}
 
 \section{Future Directions}
 
 \begin{frame}
+  \frametitle{Extending this research}
+  \begin{enumerate}
+  \item Looking at other institution's programs
+  \item Getting linguistics student feedback
+  \item Reaching out to academics in math of language community.
+  \end{enumerate}
+\end{frame}
+
+\begin{frame}
   \frametitle{A course for Grinnell}
+  
+  \begin{columns}
+    \column{0.5\textwidth}
+      \begin{itemize}
+      \item Navigate the mathematical requirement
+      \item Perhaps a more general math of language curriculum?
+      \item Finalize syllabus into 14-week schedule
+      \end{itemize}
+    \column{0.5\textwidth}
+      \begin{figure}
+        \centering
+        \includegraphics[width=0.3\textwidth]{GrinnellLogo.jpg}
+      \end{figure}
+  \end{columns}
 \end{frame}
 
 \begin{frame}
   \frametitle{A course for the public}
-  
+  \begin{itemize}
+  \item GitHub repository with syllabus, this presentation, and PDF scans of lecture notes
+  \item Please submit pull requests!!
+  \item Everything is licensed under MIT (free to use with accreditation provided)
+  \item Let's develop mathematical literacy in linguistics as a community
+  \end{itemize}
 \end{frame}
 
 \begin{frame}
   \frametitle{It's your turn!}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.2\textwidth]{qrcode.png}
+    \caption{GitHub Repository: andrewfargo/NewMinimAlgFrm.}
+  \end{figure}
 \end{frame}
 
 \begin{frame}[allowframebreaks]
